# agent

./: .env.example  .gitignore  HACKATHON-IDEAS.md  README.md  TODO-EMAIL-GUARD.md  agent-skeleton.py  compliance.md  pyproject.toml  server.py
agent/: agent.py
agent/policies/: confidentiality.md  legal.md  marketing.md  pii.md
agent/tools/: __init__.py  compliance.py  policy.py  redaction.py
docs/: AGENT-PLAN.md  PRESENTATION.md
test_emails/: clean_email.txt  confidentiality_breach.txt  marketing_issue.txt  multiple_issues.txt  pii_violation.txt
web/: api.js  app.js  index.html  styles.css
