[project]
name = "outbound-email-guard"
version = "0.1.0"
description = "reviews outbound emails for compliance issues and iteratively rewrites them until they pass"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.2.2",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]
